LU-239 Lustre Header (include/lprocfs_status.h) is not ISO C99 complaint

Signed-off-by: Lai Siyao <laisiyao@whamcloud.com>
Change-Id: I40ce6ac0ecaaf19c01cd25603971ff1fb8ed10df
Reviewed-on: http://review.whamcloud.com/465
Tested-by: Hudson
Reviewed-by: Yang Sheng <ys@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>